--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary-light: #b7b8b8;
+  --color-primary-light: #f0f0f0;
   --color-primary-dark: #472761;
   --color-secondary: #761875;
   --color-background: #0a1530;
