Styling changes and refactoring (#2)
* style: add theme variables
refactor: add 'Transition' import

* style: change primary-light color

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,5 +1,16 @@
 @import "tailwindcss";
 
+@theme {
+  --color-primary-light: #f0f0f0;
+  --color-primary-dark: #472761;
+  --color-secondary: #761875;
+  --color-background: #0a1530;
+  --color-purple-1: #972395;
+  --color-purple-2: #641562;
+  --color-card-1: #9a1635;
+  --color-card-2: #4d0a1a;
+}
+
 .rubik {
-    font-family: Rubik;
+    font-family: 'Rubik', sans-serif;
 }
