--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,45 +22,7 @@ layout: default
 <!-- Post Content -->
 <v-post class="m-4" id="{{ page.id }}" next="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}"
     previous="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}"></v-post>
-<hr>
 
-{% if site.disqus_account %}
-<article>
-    <div id="disqus" class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-
-                <h2 class="section-heading">Leave a comment! We <i style="color:red" class="fa fa-heart"></i> it!</h2>
-
-                <script id="dsq-count-scr" src="//{{ site.disqus_account }}.disqus.com/count.js" async></script>
-
-
-                <div id="disqus_thread"></div>
-                <script>
-
-                    /**
-                    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-                    /*
-                    var disqus_config = function () {
-                    this.page.url = {{ post.url | prepend: site.baseurl }};  // Replace PAGE_URL with your page's canonical URL variable
-                    this.page.identifier = {{ post.title | prepend: site.baseurl }};; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-                  };
-                  */
-
-                    (function () { // DON'T EDIT BELOW THIS LINE
-                        var d = document, s = d.createElement('script');
-                        s.src = '//{{ site.disqus_account }}.disqus.com/embed.js';
-                        s.setAttribute('data-timestamp', +new Date());
-                        (d.head || d.body).appendChild(s);
-                    })();
-                </script>
-                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments
-                        powered by Disqus.</a></noscript>
-
-            </div>
-        </div>
-    </div>
-</article>
-
+{% if site.giscus.enabled %}
+<comments class="my-8" giscus='{{ site.giscus | jsonify }}'></comments>
 {% endif %}
