--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,8 @@ layout: default
                     {% if page.subtitle %}
                     <h2 class="p-4 subheading hover-black text-primary-light font-normal">{{ page.subtitle }}</h2>
                     {% endif %}
-                    <p class="text-primary-light font-light text-xl select-none">Posted by {% if page.author %}{{ page.author }}{% else %}Anonymous{% endif %}</p>
+                    <p class="text-primary-light font-light text-xl select-none">Posted by {% if page.author %}{{
+                        page.author }}{% else %}Anonymous{% endif %}</p>
                 </div>
             </div>
         </div>
