--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -57,12 +57,12 @@
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-primary-light: #f0f0f0;
-    --color-primary-dark: #472761;
+    --color-primary-dark: #0e0f4a;
     --color-background: #0a1530;
     --color-purple-1: #972395;
-    --color-purple-2: #641562;
-    --color-card-1: #9a1635;
-    --color-card-2: #4d0a1a;
+    --color-purple-2: #c035bd;
+    --color-card-1: #0e0f4a;
+    --color-card-2: #022096;
   }
 }
 @layer base {
@@ -295,6 +295,9 @@
   .mr-4 {
     margin-right: calc(var(--spacing) * 4);
   }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
+  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
@@ -381,6 +384,9 @@
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .flex-col {
     flex-direction: column;
@@ -944,7 +950,6 @@
 .rubik {
   font-family: 'Rubik', sans-serif;
 }
-
 .section {
   min-height: 100vh;
   display: flex;
